--- a/es-kibana.yaml
+++ b/es-kibana.yaml
@@ -6,8 +6,10 @@ metadata:
     k8s-app: kibana-logging
     kubernetes.io/name: "Kibana"
 spec:
+  type: NodePort
   ports:
   - port: 5601
+    nodePort: 30601
     protocol: TCP
     targetPort: ui
   selector:
@@ -30,7 +32,7 @@ spec:
       containers:
       - name: kibana-logging
         image: kayrus/docker-kibana-kubernetes:4.6.1
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         resources:
           # keep request = limit to keep this container in guaranteed class
           limits:
