--- a/k8s-events-printer.yaml
+++ b/k8s-events-printer.yaml
@@ -18,4 +18,4 @@ spec:
       containers:
       - name: kubernetes-events-printer
         image: kayrus/kubernetes-events-printer:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
